--- a/public/iframe.html
+++ b/public/iframe.html
@@ -1,1 +1,1 @@
-<iframe src="https://frontend-app.ngrok.io/survey" title="Hosting Calculator" style="width: 100%;height: 100vh;border: none;" id="iframe"></iframe>
+<iframe src="https://hosting-calculator.herokuapp.com/survey" title="Hosting Calculator" style="width: 100%;height: 100vh;border: none;" id="iframe"></iframe>
