--- a/public/survey.html
+++ b/public/survey.html
@@ -354,7 +354,7 @@
             </div>
             <div class="thanks-message text-center" id="thankyou-tab">
               <img
-                src="https://i.imgur.com/O18mJ1K.png"
+                src="./barco-vikingo.png"
                 width="100"
                 class="mb-4"
               />
