updated html for mobile screen

--- a/public/survey.html
+++ b/public/survey.html
@@ -236,6 +236,24 @@
       .thanks-message span{
         font-size: 25px;
       }
+
+      @media only screen and (max-width: 768px){
+        .step .fa{
+        font-size: 20px;
+        }
+        .step {
+        height: 40px;
+        width: 40px;
+      }
+
+      .tab h2 {
+        font-size: 1.5rem;
+      }
+
+      .thanks-message span {
+        font-size: 22px;
+      }
+    }
     </style>
   </head>
   <body oncontextmenu="return false" class="snippet-body">
