added privacy policy

--- a/public/survey.html
+++ b/public/survey.html
@@ -253,7 +253,15 @@
       .thanks-message span {
         font-size: 22px;
       }
+
+      .thanks-message .privacy-policy{
+        font-size: 18px !important;
+      }
     }
+
+    .thanks-message .privacy-policy{
+        font-size: 20px;
+      }
     </style>
   </head>
   <body oncontextmenu="return false" class="snippet-body">
@@ -391,6 +399,7 @@
                 Con planes desde 3,99€ al mes, soporte 24/7, dominio gratis
                 el primer año y certificado SSL gratuito, este hosting es todo
                 lo que necesitas para tu blog o web de WordPress.
+                <br/><p class="privacy-policy">Al apuntarte, estás de acuerdo con la política de privacidad de Tribu Olaf.</p>
                 <br/>
                 <br/>
                 <a id="result-link" href="https://www.siteground.es/go/8yl06h20rl" target="_blank">VER LA OFERTA</a>
