added privacy policy

--- a/public/survey.html
+++ b/public/survey.html
@@ -259,9 +259,14 @@
       }
     }
 
-    .thanks-message .privacy-policy{
-        font-size: 20px;
-      }
+    #newsletter-tab .privacy-policy{
+      font-size: 20px;
+      margin-bottom: 30px;
+    }
+
+    #newsletter-tab h2{
+      margin-bottom: 15px;
+    }
     </style>
   </head>
   <body oncontextmenu="return false" class="snippet-body">
@@ -378,6 +383,7 @@
             <div class="tab" id="newsletter-tab">
               <h2>Apúntate a la newsletter para enviarte vídeos privados sobre
                 cómo crear y configurar el hosting (opcional).</h2>
+              <p class="privacy-policy">Al apuntarte, estás de acuerdo con la política de privacidad de Tribu Olaf.</p>
               <p>
                 <input
                   placeholder="Email"
@@ -399,7 +405,6 @@
                 Con planes desde 3,99€ al mes, soporte 24/7, dominio gratis
                 el primer año y certificado SSL gratuito, este hosting es todo
                 lo que necesitas para tu blog o web de WordPress.
-                <br/><p class="privacy-policy">Al apuntarte, estás de acuerdo con la política de privacidad de Tribu Olaf.</p>
                 <br/>
                 <br/>
                 <a id="result-link" href="https://www.siteground.es/go/8yl06h20rl" target="_blank">VER LA OFERTA</a>
